--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
-.App {
-  text-align: center;
+.App-header li{
+   list-style: none;
+   margin-right: 20px;
+   padding: 20px;
+  
+}
+.App-header li a{
+    color: white;
+    text-decoration: none;
+}
+.App-header h2{
+  margin-left: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App-header{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    align-items: center;
+    text-decoration: none;
+    background-color: rgb(10, 10, 10);
+    height: 10vh;
+    width: 100vw;
+    color:rgb(252, 252, 252);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App-header ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+   
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.searchBar{
+    margin-top:20px ;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.searchButton{
+    font-family: var(--font-choosen);
+    width:10%;
+    height: 100%;
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+    border: none;
+    background-color: #F4F4F4;
+    font-size: 20px;
+    font-weight: 600;
+    padding-left: 20px;
+    border: 1px solid transparent;
+}
+
+.wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: var(--far);
+    width: 100%;
+    height: 64px;
+    margin: 40px auto 45px auto;
+    position: relative;
+    transition: height 0.2s linear;
+}
+.searchBox{
+    font-family: var(--font-choosen);
+    width:50%;
+    height: 100%;
+    border-top-left-radius: 16px;
+    border-bottom-left-radius: 16px;
+    border: none;
+    background-color: #F4F4F4;
+    font-size: 20px;
+    font-weight: 600;
+    padding-left: 20px;
+    border: 1px solid transparent;
+}
+
+.searchBox:hover,.searchButton:hover{
+    border: 1px solid #A445ED;
+}
+
+.searchBox:focus{
+    outline: 1px solid #A445ED;
+}
+
+.searchBox:invalid{
+    border: 1px solid #FF5252;
+    outline: 1px solid #FF5252;
+}
+
+.searchBox::placeholder{
+    font-weight: bold;
+    font-size: 20px;
+}
+
+
+.invalidMessage{
+    color: #FF5252;
+    font-family: "Sans";
+    font-size: 24px;
+    position: absolute;
+    top: 40px;
+    left: 0px;
+    display: none;
+}
+
+@media(max-width: 535px){
+    .searchBox{
+        font-size: 16px;
+    }
+
+    .wrapper{
+        height: 48px;
+    }
+
+    .searchIcon{
+        top: 15px;
+    }
 }
